# Issue-Tracker

./: .env.example  Dockerfile  README.md  celery.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  celery_app.py  lifespan.py  llm_service.py  schemas.py  storage.py
app/database/: __init__.py  config.py  models.py
app/middleware/: __init__.py  timing.py
app/routes/: __init__.py  issues.py
app/tasks/: __init__.py  celery_tasks.py  issues.py  notifications.py
data/: data.json
docs/: CELERY_SETUP.md  DOCKER_SETUP.md  LLM-Plan.md
